src/assets/scss/now-ui-kit.scss
/*!

 =========================================================
 * Vue Now UI Kit - v1.1.0
 =========================================================

 * Product Page: https://www.creative-tim.com/product/now-ui-kit
 * Copyright 2019 Creative Tim (http://www.creative-tim.com)

 * Designed by www.invisionapp.com Coded by www.creative-tim.com

 =========================================================

 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

 */

@import 'now-ui-kit/variables';
@import 'now-ui-kit/mixins';
// Plugins CSS
@import "now-ui-kit/plugins/plugin-bootstrap-switch";
@import "now-ui-kit/plugins/plugin-nouislider";
@import "now-ui-kit/plugins/plugin-datepicker";
// Core CSS
@import "now-ui-kit/buttons";
@import "now-ui-kit/inputs";
@import "now-ui-kit/checkboxes-radio";
@import "now-ui-kit/progress";
@import "now-ui-kit/badges";
@import "now-ui-kit/pagination";
@import "now-ui-kit/typography";
@import "now-ui-kit/misc";
@import "now-ui-kit/pills";
// components
@import "now-ui-kit/nucleo-outline";
@import "now-ui-kit/tabs";
@import "now-ui-kit/navbar";
@import "now-ui-kit/dropdown";
@import "now-ui-kit/alerts";
@import "now-ui-kit/images";
@import "now-ui-kit/popups";
@import "now-ui-kit/modals";
@import "now-ui-kit/carousel";
@import "now-ui-kit/footers";
// Cards
@import "now-ui-kit/cards";
@import "now-ui-kit/cards/card-plain";
@import "now-ui-kit/cards/card-signup";
// example pages and sections
@import "now-ui-kit/example-pages";
@import "now-ui-kit/sections";
@import "now-ui-kit/responsive";
// Element UI plugins
@import "now-ui-kit/element-ui-plugins/carousel";
@import "now-ui-kit/element-ui-plugins/date_picker";
@import "now-ui-kit/element-ui-plugins/input";
@import "now-ui-kit/element-ui-plugins/tooltip";
@import "now-ui-kit/element-ui-plugins/popover";
.list-content li {
    width: max-content !important;
}

.list-content {
    text-align: left !important;
}

.select-rounded {
    border-radius: 15px !important;
}

input[type="file"] {
    border-radius: 15px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.upload-button {
    max-width: 80px;
    margin-right: 17px;
    bottom: 16px;
    right: 10px;
}

.btn-upload {
    background-color: #f96332;
    border-radius: 30px;
    margin-right: 20px;
}

.nav-ul ul {
    height: 100px !important;
}

.nav-setting ul {
    height: 70px !important;
}

.btn-profile {
    color: #FFFFFF !important;
    background-color: #f96332 !important;
}

.btn-profile:hover {
    color: #FFFFFF !important;
    background-color: #f96332 !important;
    box-shadow: 0 3px 8px 0 rgb(0 0 0 / 17%) !important;
}

.btn-call {
    color: #FFFFFF !important;
    background-color: #f96332 !important;
    font-size: 14px;
    font-weight: bolder
}

.btn-call:hover {
    color: #FFFFFF !important;
    background-color: #f96332 !important;
    box-shadow: 0 3px 8px 0 rgb(0 0 0 / 17%) !important;
    font-size: 14px;
    font-weight: bolder
}

.btn-blog {
    color: #FFFFFF !important;
    background-color: #0a4913 !important;
}

.btn-blog:hover {
    color: #FFFFFF !important;
    background-color: #0a4913 !important;
    box-shadow: 0 3px 8px 0 rgb(0 0 0 / 17%) !important;
}

.btn-telemarketing {
    color: #FFFFFF !important;
    background-color: rgb(96, 125, 249) !important;
    font-size: 14px;
    font-weight: bolder
}

.nav-recruitment {
    font-size: 14px;
    font-weight: bolder
}

.fixed-top {
    position: absolute;
}

.company-name {
    @media screen and (max-width: 425px) {
        font-size: 2.375rem;
    }
}

.section-card {
    border: 1px solid #ebeef5;
    -webkit-box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
    box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 20%);
    transition: 0.3s;
    border-radius: 24px;
    margin-top: 4rem;
    &.benefits {
        background: #f5faf7;
        p {
            font-size: 18px;
            margin-left: 16px;
        }
        ul {
            margin-left: 44px;
        }
        li {
            font-weight: 400;
            list-style-image: url("../img/checkmark.svg");
            margin-bottom: 6px;
            font-size: 18px;
            padding: 0;
        }
    }
    &.contact-steps {
        background: #fff8f6;
        >.title {
            color: #f96332;
        }
        p {
            font-size: 18px;
            margin-left: 16px;
        }
        ol {
            margin-left: 44px;
        }
        ol[lang] li {
            counter-increment: number;
            font-style: italic;
        }
        ol[lang] li:before {
            content: counter(number) '. ';
            font-style: normal;
            color: #f00;
        }
        li {
            font-weight: 400;
            margin-bottom: 6px;
            font-size: 18px;
            padding: 0;
        }
        // li:last-child {
        //     color: #ff0000;
        // }
    }
}

.step-empasize {
    color: #f96332;
    font-size: 24px;
    font-weight: bolder;
}

// flickity
.flickity-viewport {
    height: 500px !important;
}

.flickity-button {
    top: -1.5em;
    width: 24px;
    height: 24px;
    background: 0 0 !important;
    &.flickity-prev-next-button {
        &.previous {
            right: 5%;
            left: calc(100% - 70px);
        }
    }
}

.flickity-button:disabled {
    opacity: 0.3;
    cursor: auto;
    pointer-events: none;
}

